chore: add template sync generator (#8)
* chore: add template sync generator

- Generate .gemini and .codex templates from .claude

- Add npm scripts for sync/check

* docs: add PR 8 gap analysis

- Summarize readiness-to-merge criteria and open gaps

* chore: enforce template sync

- Remove unused helper and clarify Codex transforms

- Add CI job to run sync check on PRs

- Drop speculative gpt-5.2 keyword

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agentbootup",
   "version": "0.3.0",
-  "description": "Seed Claude Code, Gemini CLI, and Windsurf development assets (agents, skills, commands, workflows) into any project.",
+  "description": "Seed Claude Code, OpenAI Codex, Gemini CLI, and Windsurf development assets (agents, skills, commands, workflows) into any project.",
   "type": "module",
   "bin": {
     "agentbootup": "./bootup.mjs"
@@ -19,6 +19,7 @@
   "keywords": [
     "claude",
     "claude-code",
+    "codex",
     "gemini",
     "gemini-cli",
     "windsurf",
@@ -34,6 +35,8 @@
   "author": "",
   "scripts": {
     "dry-run": "node ./bootup.mjs --dry-run --verbose",
+    "sync-templates": "node ./scripts/sync-templates.mjs",
+    "check-templates": "node ./scripts/sync-templates.mjs --check",
     "test": "node -e 'console.log(\"ok\")'"
   }
 }
